--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
     "core-js": "^2.4.1",
+    "devextreme": "21.1.5",
+    "devextreme-angular": "21.1.5",
+    "jszip": "^3.7.1",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
