--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "devextreme": "21.1.5",
     "devextreme-angular": "21.1.5",
     "jszip": "^3.7.1",
+    "patternomaly": "^1.3.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
